--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "mcp-wordle"
 version = "0.1.0"
-description = "Add your description here"
+description = "An MCP server implementation of the Wordle game that can be played through AI assistants like Claude."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
